== 0.2.1 (In Git)

== Bugfixes
* After blocks are run in reverse order of registration. (#113 Aslak Hellesøy)
* Snippets are showing 'Ands' (#249 Aslak Hellesøy)

== 0.2.0 2009-03-18

This release sports a bunch of new and exciting features, as well a major rewrite of Cucumber's internals. 
The rewrite was done to address technical debt and to have a code base that is easier to evolve and maintain. 

There are some changes to the Gherkin language that breaks backwards compatible with the 0.1.x series. 
Most importantly, "GivenScenario" and "More Examples" no longer exist. See the "Removed features" section 
below for more details on how to use alternatives.

Since the grammar has changed, there are some new keywords. We have to rely on the community
to provide updated translations. This is much easier than before - just update languages.yml.
There is no static code generation anymore. To list all languages:

  cucumber --lang help
  
And to list the keywords for a particular language:

  cucumber --lang en-lol help
  
There are some really awesome new features in this release: Tagging, Autoformatting, automatic 
aliasing of keywords in all languages, full Ruby 1.9 support and improved output 
for multiline arguments are some of the highlights. 

== Bugfixes
* New StepInvocation breaks console formatter for pending steps. (#241 Jacob Radford) 
* Within Scenario Outlines when replacing with a nil in a step name use empty string instead. (#237 Joseph Wilk) 
* Fixed bug with Scenario Outlines incorrectly replacing values in step tables with nil. (#237 Joseph Wilk)
* Within Scenario Outlines when replacing with a nil in multiline strings use empty string instead. (#238 Joseph Wilk)
* Re-structure the ast: Feature -> Background -> (Scenario|ScenarioOutline)*. Fixes bug with background being called outside transactions. (#181 Joseph Wilk)
* --strict always exits with status 1 (#230 Tim Cuthbertson)