@@ -1,1 +1,1 @@
-%w{color_io pretty progress profile rerun html}.each{|n| require "cucumber/formatter/#{n}"}
+%w{color_io pretty progress profile rerun html usage}.each{|n| require "cucumber/formatter/#{n}"}
